// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exec-tool parity (FILE-SPLIT-02) > behavior matrix - representative inputs > buildInstallDetourHint: produces hint for advise mode overlap 1`] = `
"{
  "hintContentBlock": {
    "text": "[hint] Installed packages overlap available capabilities:\\n- yfinance -> available skill \\"yahoo-finance-skill\\"\\nIf you can use these capabilities directly, do so before relying on the install.",
    "type": "text"
  },
  "installDetourHint": "[hint] Installed packages overlap available capabilities:\\n- yfinance -> available skill \\"yahoo-finance-skill\\"\\nIf you can use these capabilities directly, do so before relying on the install."
}"
`;

exports[`exec-tool parity (FILE-SPLIT-02) > behavior matrix - representative inputs > buildInstallDetourHint: produces hint for mcp overlap with cluster 1`] = `
"{
  "hintContentBlock": {
    "text": "[hint] Installed packages overlap available capabilities:\\n- @playwright/test -> connected MCP server \\"playwright-mcp\\" (cluster: browser-automation)\\nIf you can use these capabilities directly, do so before relying on the install.",
    "type": "text"
  },
  "installDetourHint": "[hint] Installed packages overlap available capabilities:\\n- @playwright/test -> connected MCP server \\"playwright-mcp\\" (cluster: browser-automation)\\nIf you can use these capabilities directly, do so before relying on the install."
}"
`;

exports[`exec-tool parity (FILE-SPLIT-02) > behavior matrix - representative inputs > buildSpawnCommand: assembles argv for npm install 1`] = `
"{
  "args": [
    "-c",
    "npm install"
  ],
  "bin": "/bin/bash",
  "cwd": "/workspace"
}"
`;

exports[`exec-tool parity (FILE-SPLIT-02) > behavior matrix - representative inputs > buildSpawnCommand: assembles argv for raw interpreter command 1`] = `
"{
  "args": [
    "-c",
    "bash -c 'echo hello'"
  ],
  "bin": "/bin/bash",
  "cwd": "/workspace"
}"
`;

exports[`exec-tool parity (FILE-SPLIT-02) > behavior matrix - representative inputs > buildSpawnCommand: wraps with python pty when pty=true 1`] = `
"{
  "args": [
    "-c",
    "import pty,sys;sys.exit(pty.spawn(sys.argv[1:]))",
    "/bin/bash",
    "-c",
    "ls -la"
  ],
  "bin": "python3",
  "cwd": "/workspace"
}"
`;

exports[`exec-tool parity (FILE-SPLIT-02) > behavior matrix - representative inputs > createExecTool: factory returns object with execute method and expected keys 1`] = `
"[
  "description",
  "execute",
  "label",
  "name",
  "parameters",
  "promptGuidelines"
]"
`;

exports[`exec-tool parity (FILE-SPLIT-02) > behavior matrix - representative inputs > createExecTool: factory returns object with execute method and expected keys 2`] = `
"{
  "descriptionPrefix": "Execute a shell command. Supports background mode, environment o",
  "label": "Exec",
  "name": "exec"
}"
`;

exports[`exec-tool parity (FILE-SPLIT-02) > public API surface > exports the expected named symbols 1`] = `
"[
  "buildInstallDetourHint",
  "buildSpawnCommand",
  "createExecTool",
  "killTree"
]"
`;
